# Mouse-Step-Counter

./: .gitignore  DEMO.md  README.md  check_logs.html  debug_logs.html  index.html  package-lock.json  package.json  pet.html
.github/workflows/: build-windows.yml  macos-build.yml  multi-platform.yml  release.yml  windows-only.yml
src/: App.tsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
