[package]
name = "mouse-step-counter"
version = "0.0.1"
description = "A Tauri App"
authors = ["apollo"]
license = ""
repository = ""
default-run = "mouse-step-counter"
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.6.1", features = [ "window-all", "macos-private-api", "shell-open", "devtools"] }
enigo = "0.3.0"
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs" }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ] 
